[metadata]
name = diagrammer
version = 0.1.0
url = https://github.com/janedoe/diagrammer
author = Jane Doe
author_email = jane@example.com
description = All the boilerplate you need to create a LocalStack extension.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.0
    diagrams

[options.entry_points]
localstack.extensions =
    diagrammer = diagrammer.extension:MyExtension
